add osx jmods